hardcoded first question in question array to render on html using jQuery.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="timer">20 (hardcoded)</div>
 
-    <div id="questions-div">Questions will be rendered here</div>
+    <div id="questions-div">Questions will be rendered here. </div>
 
     <div id="answers-div">Answers will be rendered here</div>
     
