countdown is working and displaying on html.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     
     <h1>Friends Trivia Game</h1>
 
-    <div id="timer">20 (hardcoded)</div>
+    <div id="timer">
+        <h2>20 (hardcoded)</h2>
+    </div>
 
     <div id="questions-div">Questions will be rendered here. </div>
 
