answer choices are now working in conjunction with countdwon timer and render questions function.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <div id="questions-div">Questions will be rendered here. </div>
 
-    <div id="answers-div">Answers will be rendered here</div>
+    <br><br>
+
+    <div id="answers-div">ANSWER CHOICES</div>
     
 </body>
 </html>
