changed logic from hard coded questions to ajax call to trivia API. Ajax call is working, question is being rendered on html.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Friends Trivia Game</title>
+    <title>Trivia Game</title>
 
     <!-- jQuery Link -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -16,10 +16,10 @@
 </head>
 <body>
     
-    <h1>Friends Trivia Game</h1>
+    <h1>Trivia Game</h1>
 
     <div id="timer">
-        <h2>20 (hardcoded)</h2>
+        <h2>5 (hardcoded)</h2>
     </div>
 
     <div id="questions-div">Questions will be rendered here. </div>
